FINT-52-FINT-46: Add and improve listener integration tests