@@ -3,17 +3,19 @@ package no.novari.kafka.consumertracking.events;
 import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
+import lombok.ToString;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Getter
-@AllArgsConstructor
+@ToString
 @EqualsAndHashCode
-public class OffsetReport<V> implements EventReport<V> {
+@AllArgsConstructor
+public class OffsetsCommitted<VALUE> implements Event<VALUE> {
     private final List<Long> offsets;
 
-    public OffsetReport(Long offset) {
-        this.offsets = List.of(offset);
+    public OffsetsCommitted(Long... offsets) {
+        this(Arrays.asList(offsets));
     }
-
 }
